manifests/transparent_multicluster/service.yml
apiVersion: v1
kind: Service
metadata:
  name: call-me-maybe
  labels:
    app: call-me-maybe
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: call-me-maybe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-me-maybe
spec:
  selector:
    matchLabels:
      app: call-me-maybe
      version: carly-rae-jepsen
  template:
    metadata:
      labels:
        app: call-me-maybe
        version: carly-rae-jepsen
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: hello
        image: istio/examples-helloworld-v1
        ports:
        - containerPort: 5000
          name: http
        securityContext:
          runAsUser: 1000
