manifests/transparent_multicluster/dest-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: call-me-maybe
spec:
  host: call-me-maybe.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 5
      interval: 2s
      baseEjectionTime: 10s
    tls:
      mode: "ISTIO_MUTUAL"
